--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="row" style="position:relative">
             <img src="img/header.png" class="parallax-bg">
               <div class="hero-text">
-                <p>Product designer’s gallery featuring really good <a href="#"><span class="hero-links">design works</span></a> and <a href="#"><span class="hero-links">thoughts</span></a> presented in <a href="#"><span class="hero-links">great ways</span></a>.
+                <p>I am Shengfan, a product designer passionate about crafting <a href="#"><span class="hero-links">elegant</span></a>, <a href="#"><span class="hero-links">just-right</span></a> and <a href="#"><span class="hero-links">thoughtful</span></a> experiences for complex systems.
                 </p>
               </div>
               <!-- <a href="#about" class="btn btn-outline-primary js-scroll-trigger btn-header"> Explore UX Works
